ci: publish DMG via GitHub Actions

--- a/.github/workflows/build-mac.yml
+++ b/.github/workflows/build-mac.yml
@@ -6,25 +6,24 @@ on:
     tags:
       - "v*"
 
+permissions:
+  contents: write
+
 jobs:
   mac:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+      - run: npm install
+      - run: npm run dist -- --mac dmg
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build macOS DMG
-        run: npm run dist -- --mac dmg
-
-      - name: Upload DMG artifact
-        uses: actions/upload-artifact@v4
+      - name: Upload DMG to GitHub Release
+        uses: softprops/action-gh-release@v2
         with:
-          name: mac-dmg
-          path: dist-electron/*.dmg
+          files: dist-electron/*.dmg
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
